--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,11 @@
+.card-footer-block {
+  display: inline-block;
+}
+
+/* card */
+
+/* attribution */
+
 .attribution {
   font-size: 11px;
   text-align: center;
