--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,10 @@
+* {
+  box-sizing: border-box;
+  border: solid black 1px;
+  margin: 0;
+  padding: 0;
+}
+
 .card-footer-block {
   display: inline-block;
 }
