--- a/CSS/style.css
+++ b/CSS/style.css
@@ -11,9 +11,21 @@
 
 /* card */
 
+#profile-card {
+  width: 350px;
+  height: 400px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 /* attribution */
 
 .attribution {
+  width: 100%;
+  position: fixed;
+  bottom: 5px;
   font-size: 11px;
   text-align: center;
 }
