--- a/CSS/style.css
+++ b/CSS/style.css
@@ -20,6 +20,50 @@
   transform: translate(-50%, -50%);
 }
 
+.card-corners {
+  border-radius: 15px;
+}
+
+/* card header */
+
+.card-top-corners {
+  border-radius: 15px 15px 0px 0px;
+}
+
+/* card body */
+
+#profile-picture {
+  width: 96;
+  height: 96;
+  display: block;
+  margin: auto;
+  border-radius: 50%;
+}
+
+#name-age-container {
+  margin: auto;
+  width: 60%;
+}
+
+#name,
+#age {
+  display: inline-block;
+}
+
+#location {
+  text-align: center;
+}
+
+/* card footer */
+
+.card-footer-block {
+  width: 32.5%;
+}
+
+.card-footer-block p {
+  text-align: center;
+}
+
 /* attribution */
 
 .attribution {
