--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,6 +5,11 @@
   padding: 0;
 }
 
+body {
+  background-image: url("../images/bg-pattern-top.svg");
+  background-repeat: no-repeat;
+}
+
 .card-footer-block {
   display: inline-block;
 }
@@ -18,6 +23,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+
+  background-color: white;
 }
 
 .card-corners {
