--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,6 @@
 /*
   FIXME: not sure how to include both background images
+  FIXME: no space between name and age
   TODO: grey text line spacing
   TODO: margins
 */
@@ -8,7 +9,7 @@
 
 * {
   box-sizing: border-box;
-  border: solid black 1px;
+  /*border: solid black 1px; */
   margin: 0;
   padding: 0;
 }
@@ -47,7 +48,7 @@ body {
 
 #profile-card {
   width: 350px;
-  height: 400px;
+  height: 380px;
   position: fixed;
   top: 50%;
   left: 50%;
@@ -79,14 +80,14 @@ body {
   position: absolute;
   bottom: 50%;
   left: 50%;
-  transform: translate(-50%, -5%);
+  transform: translate(-50%, 2%);
 
   border: solid white 5px;
   border-radius: 50%;
 }
 
 #name-age-container {
-  margin: 15% auto 0;
+  margin: 19% auto 0;
   text-align: center; /* inline block child elements are centered because of this */
 }
 
@@ -96,6 +97,7 @@ body {
 }
 
 #location {
+  margin: 0.6rem auto 2rem;
   text-align: center;
 }
 
@@ -104,6 +106,7 @@ body {
 .card-footer-block {
   display: inline-block;
   width: 32.5%;
+  margin-top: 7%;
 }
 
 .card-footer-block p {
